plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security' // Spring Security dependency
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // JWT dependency
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5' // JWT implementation
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JWT with Jackson support
	implementation 'org.springframework.boot:spring-boot-starter-data-redis' // Redis dependency
	implementation 'org.springframework.session:spring-session-data-redis' // Spring Session Redis dependency
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-validation' // validation
}

tasks.named('test') {
	useJUnitPlatform()
}
